Fix nlohmann_json dependency
The `package_deps` list is used to iterate over all dependencies in the
package config file and run `find_package` on each of them. This should
be using the package name (`nlohmann_json`) and not the target name
(`nlohmann_json::nlohmann_json`).

Signed-off-by: Fredrik Appelros <fredrik.appelros@hypergene.se>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -84,8 +84,8 @@ list(APPEND package_deps OpenTracing)
 
 hunter_add_package(nlohmann_json)
 find_package(nlohmann_json CONFIG REQUIRED)
-list(APPEND LIBS  nlohmann_json::nlohmann_json)
-list(APPEND package_deps  nlohmann_json::nlohmann_json)
+list(APPEND LIBS nlohmann_json::nlohmann_json)
+list(APPEND package_deps nlohmann_json)
 
 option(JAEGERTRACING_BUILD_EXAMPLES "Build examples" ON)
 
