Add Appveyor badge and debug builds.
Signed-off-by: FR-MUREX-COM\mchaikhadouaihy <mehrez.douaihy@gmail.com>

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -10,14 +10,13 @@ platform:
 
 configuration:
   - Debug
-  - Release
 
 before_build:
   - cmake -H. -Bbuild -A%PLATFORM% -DBUILD_TESTING=ON
 
 build:
   project: build\jaegertracing.sln
-  parallel: false
+  parallel: true
   verbosity: normal
 
 test_script:
