Adding x-b3- headers parsing and propagating support
Currently the library doesnt support parsing and propagating x-b3-* headers as traceid, spanid, parentspanid and sampled flag, this PR is attempt to add support to parse and forward these headers. So if uber-context-id is received, that would be propagated or if x-b3-* are present those would be propagated

Signed-off-by: kunal_ekawde <kunalekawde@gmail.com>

--- a/src/jaegertracing/Constants.h.in
+++ b/src/jaegertracing/Constants.h.in
@@ -37,7 +37,11 @@ static constexpr auto kSamplerTypeRemote = "remote";
 static constexpr auto kSamplerTypeProbabilistic = "probabilistic";
 static constexpr auto kSamplerTypeRateLimiting = "ratelimiting";
 static constexpr auto kSamplerTypeLowerBound = "lowerbound";
-
+static constexpr auto kB3TraceHeaderPrefix = "x-b3-";
+static constexpr auto kB3TraceIdHeaderName = "x-b3-traceid";
+static constexpr auto kB3SpanIdHeaderName = "x-b3-spanid";
+static constexpr auto kB3ParentSpanIdHeaderName = "x-b3-parentspanid";
+static constexpr auto kB3SampledHeaderName = "x-b3-sampled";
 }  // namespace jaegertracing
 
 #endif  // JAEGERTRACING_CONSTANTS_H
