RFC:Add zipkin support

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,9 +11,10 @@ set(HUNTER_CONFIGURATION_TYPES "Release;Debug" CACHE STRING
 
 include(CMakeDependentOption)
 include(HunterGate)
+
 HunterGate(
-    URL "https://github.com/ruslo/hunter/archive/v0.23.5.tar.gz"
-    SHA1 "2c5c6fc1cf609d0856695d60f147594daf4e6b3e"
+        URL "https://github.com/ruslo/hunter/archive/v0.23.151.tar.gz"
+        SHA1 "68657b81508c2d3c248731b5a0c2125f19866721"
 )
 
 project(jaegertracing VERSION 0.4.2)
@@ -41,7 +42,7 @@ if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU" AND
    CMAKE_CXX_COMPILER_VERSION VERSION_LESS "4.9")
   message(FATAL_ERROR "Must use gcc >= 4.9")
 endif()
-
+#hunter_default_version(boost VERSION 1.69)
 hunter_add_package(thrift)
 find_package(thrift ${hunter_config} REQUIRED)
 if(HUNTER_ENABLED)
@@ -187,7 +188,9 @@ set(SRC
     src/jaegertracing/utils/HexParsing.cpp
     src/jaegertracing/utils/RateLimiter.cpp
     src/jaegertracing/utils/UDPClient.cpp
-    src/jaegertracing/utils/YAML.cpp)
+    src/jaegertracing/utils/YAML.cpp
+    src/jaegertracing/propagation/ZipkinPropagator.cpp
+    src/jaegertracing/propagation/ZipkinPropagator.h)
 
 if(JAEGERTRACING_BUILD_CROSSDOCK)
   list(APPEND SRC
@@ -223,7 +226,7 @@ if(JAEGERTRACING_PLUGIN)
   add_library(jaegertracing_plugin MODULE ${SRC})
   add_lib_deps(jaegertracing_plugin)
   target_link_libraries(jaegertracing_plugin PUBLIC
-    -static-libgcc
+          -static-libgcc
     -static-libstdc++
     -Wl,--version-script=${CMAKE_CURRENT_BINARY_DIR}/export.map)
 endif()
@@ -243,7 +246,7 @@ configure_file(
   @ONLY)
 
 if(JAEGERTRACING_BUILD_EXAMPLES)
-  add_executable(app examples/App.cpp)
+  add_executable(app examples/App.cpp )
   target_link_libraries(app PUBLIC ${JAEGERTRACING_LIB})
 endif()
 
@@ -281,7 +284,8 @@ if(BUILD_TESTING)
       src/jaegertracing/testutils/TUDPTransportTest.cpp
       src/jaegertracing/utils/ErrorUtilTest.cpp
       src/jaegertracing/utils/RateLimiterTest.cpp
-      src/jaegertracing/utils/UDPClientTest.cpp)
+      src/jaegertracing/utils/UDPClientTest.cpp
+      src/jaegertracing/propagation/ZipkinPropagatorTest.cpp)
   target_link_libraries(
       UnitTest PRIVATE testutils GTest::main)
   add_test(NAME UnitTest COMMAND UnitTest)
@@ -305,7 +309,7 @@ if(BUILD_TESTING)
 endif()
 
 if(JAEGERTRACING_BUILD_CROSSDOCK)
-  set(CROSSDOCK_SRC crossdock/Server.cpp)
+  set(CROSSDOCK_SRC crossdock/Server.cpp )
   add_executable(crossdock ${CROSSDOCK_SRC})
   target_include_directories(crossdock PUBLIC
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/crossdock>)
