--- a/src/jaegertracing/Constants.h.in
+++ b/src/jaegertracing/Constants.h.in
@@ -31,6 +31,7 @@ static constexpr auto kSamplerTypeTagKey = "sampler.type";
 static constexpr auto kSamplerParamTagKey = "sampler.param";
 static constexpr auto kTraceContextHeaderName = "uber-trace-id";
 static constexpr auto kTracerStateHeaderName = kTraceContextHeaderName;
+static constexpr auto kW3CTraceContextHeaderName = "traceparent";
 static constexpr auto kTraceBaggageHeaderPrefix = "uberctx-";
 static constexpr auto kSamplerTypeConst = "const";
 static constexpr auto kSamplerTypeRemote = "remote";
