--- a/src/jaegertracing/Constants.h.in
+++ b/src/jaegertracing/Constants.h.in
@@ -31,8 +31,9 @@ static constexpr auto kSamplerTypeTagKey = "sampler.type";
 static constexpr auto kSamplerParamTagKey = "sampler.param";
 static constexpr auto kTraceContextHeaderName = "uber-trace-id";
 static constexpr auto kTracerStateHeaderName = kTraceContextHeaderName;
-static constexpr auto kW3CTraceContextHeaderName = "traceparent";
 static constexpr auto kTraceBaggageHeaderPrefix = "uberctx-";
+static constexpr auto kW3CTraceContextHeaderName = "traceparent";
+static constexpr auto kW3CTraceStateHeaderName = "tracestate";
 static constexpr auto kSamplerTypeConst = "const";
 static constexpr auto kSamplerTypeRemote = "remote";
 static constexpr auto kSamplerTypeProbabilistic = "probabilistic";
