--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -34,3 +34,8 @@ jobs:
 
     - name: Build
       run: cmake --build build -j4
+
+    - name: Test
+      run: |
+        cd build
+        ctest -V --timeout 600
