Add Support for W3C traceparent/tracestate propagation (#255)
* Implemented W3C traceparent propagation

Signed-off-by: Tobias Stadler <ts.stadler@gmx.de>

* W3C should be lowercase as mentioned in https://www.jaegertracing.io/docs/1.21/client-features/,

Signed-off-by: Tobias Stadler <ts.stadler@gmx.de>

* Added support for setting the propagation format via environment variables

Signed-off-by: Tobias Stadler <ts.stadler@gmx.de>

* Fix assignment

Signed-off-by: Tobias Stadler <ts.stadler@gmx.de>

* Implemented Support for W3C tracestate

Signed-off-by: Tobias Stadler <ts.stadler@gmx.de>

* Extracted Jager porpagation and W3C propgation in their own classes

Signed-off-by: Tobias Stadler <ts.stadler@gmx.de>

* Fix build

Signed-off-by: Tobias Stadler <ts.stadler@gmx.de>

* Fix copyright

Signed-off-by: Tobias Stadler <ts.stadler@gmx.de>

* Use shared_ptr instead of raw pointer

Signed-off-by: Tobias Stadler <ts.stadler@gmx.de>

* Log unknown propagation formats and fall back to jaeger format

Signed-off-by: Tobias Stadler <ts.stadler@gmx.de>

* Extracted propagation format parsing

Signed-off-by: Tobias Stadler <ts.stadler@gmx.de>

* Use SpanContext with known IDs to simplify test

Signed-off-by: Tobias Stadler <ts.stadler@gmx.de>

--- a/src/jaegertracing/Constants.h.in
+++ b/src/jaegertracing/Constants.h.in
@@ -32,6 +32,8 @@ static constexpr auto kSamplerParamTagKey = "sampler.param";
 static constexpr auto kTraceContextHeaderName = "uber-trace-id";
 static constexpr auto kTracerStateHeaderName = kTraceContextHeaderName;
 static constexpr auto kTraceBaggageHeaderPrefix = "uberctx-";
+static constexpr auto kW3CTraceParentHeaderName = "traceparent";
+static constexpr auto kW3CTraceStateHeaderName = "tracestate";
 static constexpr auto kSamplerTypeConst = "const";
 static constexpr auto kSamplerTypeRemote = "remote";
 static constexpr auto kSamplerTypeProbabilistic = "probabilistic";
