--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -30,10 +30,10 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Configure
-      run: cmake -Bbuild -DCMAKE_CXX_FLAGS="-Wno-error=deprecated-copy"
+      run: cmake -Bbuild
 
     - name: Build
-      run: cmake --build build -j4 -DCMAKE_CXX_FLAGS="-Wno-error=deprecated-copy"
+      run: cmake --build build -j4
 
     - name: Test
       run: |
