--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -13,7 +13,8 @@ env:
 
 jobs:
   build:
-
+    if: "!contains(github.event.head_commit.message, 'skip ci') && !contains(github.event.head_commit.message, 'ci ubuntu') && !contains(github.event.head_commit.message, 'ci win')"
+    
     runs-on: macos-latest
     
     steps:
