--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -13,7 +13,8 @@ env:
 
 jobs:
   build:
-
+    if: "!contains(github.event.head_commit.message, 'skip ci') && !contains(github.event.head_commit.message, 'ci osx') && !contains(github.event.head_commit.message, 'ci ubuntu')"
+    
     runs-on: windows-latest
     
     steps:
