--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -38,7 +38,7 @@ jobs:
         run: |
           echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
           echo "GIT_TAG_NAME=$(git describe --tag --always --long | sed -e 's/v\([0-9].*\).\([0-9].*\).\([0-9].*\)-\(.*\)-.*/\1.\2.\4/')" >> $GITHUB_ENV
-          echo "GIT_TAG=v$GIT_TAG_NAME" >> $GITHUB_ENV
+          echo "GIT_TAG=$(git describe --tag --always --long | sed -e 's/\([0-9].*\).\([0-9].*\).\([0-9].*\)-\(.*\)-.*/\1.\2.\4/')" >> $GITHUB_ENV
           echo "GIT_RELEASE_NOTES="$(git log $(git describe --tags --abbrev=0 --always)..HEAD --pretty=format:"%h - %s (%an)<br>")"" >> $GITHUB_ENV
 
       - name: Configure
