--- a/.travis.yml
+++ b/.travis.yml
@@ -76,8 +76,7 @@ matrix:
       -DJAEGERTRACING_PLUGIN=ON -DBUILD_TESTING=ON -DHUNTER_CONFIGURATION_TYPES=Release'"
 before_install:
 - eval "${MATRIX_EVAL}"
-- mkdir cmake-download && cd cmake-download && curl -O https://cmake.org/files/v3.10/cmake-3.10.0-rc5-Linux-x86_64.sh
-  && bash cmake-3.10.0-rc5-Linux-x86_64.sh --skip-license && cd ..
+- ./scripts/before-install.sh
 script:
 - CMAKE_OPTIONS="${CMAKE_OPTIONS}" ./scripts/build.sh
 after_success:
