Fixed Ubuntu workflow
Signed-off-by: Tobias Stadler <ts.stadler@gmx.de>

--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -18,6 +18,11 @@ jobs:
     
     steps:
 
+    - name: Set up GCC
+      uses: egor-tensin/setup-gcc@v1
+      with:
+        version: 7
+
     - name: Set up cache
       uses: actions/cache@v2
       with:
